--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,6 @@
      
     </div>
 
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="../src/js/serch-images.js/index.js"></script>
   </body>
 </html>
