--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Image search</title>
+    <title>Gallery</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link
       rel="stylesheet"
@@ -26,9 +26,11 @@
     <div class="container">
       <div class="gallery"></div>
       <button type="button" class="load-more is-hidden">Load more</button>
-     
+      <p class="end-collection-text is-hidden">
+        We're sorry, but you've reached the end of search results.
+      </p>
     </div>
 
-    <script type="module" src="../src/js/serch-images.js/index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
