--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,6 @@
       </p>
     </div>
 
-    <script type="module" src="./index.js"></script>
+    <script  src="./index.js"></script>
   </body>
 </html>
